add sortable distance

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	      		$(this).append(c);
 	      		bindVal(c);
 	      	}
-	    }).sortable();
+	    }).sortable({distance: 10});
 	});
 </script>
 </html>
