--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="br3 b1s p10 bg dib vat" style="width: 600px;">
 		<div>编辑栏</div>
-		<div id="ec" class="b1s bw " style="width: 100%; height: 400px; overflow: scroll;"></div>
+		<div id="ec" class="b1s bw oys" style="width: 100%; height: 400px;"></div>
 	</div>
 	<div class="br3 b1s p10 bg dib vat" style="width: 300px;">
 		<div>属性栏</div>
